# Cancer-detection-AI

./: .gitignore  .gitmodules  0README.md  DATA_PROCESSING.md  DRIVE_STRUCTURE.md  Dockerfile  README.md  requirements.txt  server_connect_3dslicer.md  tcia_dicom_to_nifti.py
3dslicer_ui/CancerAnnotationTools/: CMakeLists.txt
3dslicer_ui/CancerAnnotationTools/PatientTagger/: CMakeLists.txt  PatientTagger.py
3dslicer_ui/CancerAnnotationTools/PatientTagger/Resources/UI/: PatientTagger.ui
monai_server/: code_for_server_here.md  petct_loader.py
monai_server/radiology/: main.py
monai_server/radiology/lib/infers/: segmentation.py
monai_server/radiology/lib/trainers/: segmentation.py
monai_server/radiology/lib/transforms/: multimodal.py
src/: Monai_Server.ipynb  affine_reg.py  colab_warper.ipynb  create_mrb.py  deform_reg.py  dicom_to_nifti.py  filter_OB_WB.py  order_data_monai.py  organization_Ordered_Dicom.ipynb  pipeline_colab.py  pipeline_nifti_reg.py  preper_data_CW.py  reg_tester.py  resampling_OB_to_WB.py  sbatch submit_sorter.sh  sort_dicom.py  sort_sectra.py  spatial_resampling.py  upload_to_drive.sh  viewer.py  viewer_photo_save.py  warper.py
src/cw_code/: nifti_to_mha.py  normalize_nifti.py  preper_data_CW.py  run_cw_model.md
